// The Firmament project
// Copyright (c) 2011-2012 Malte Schwarzkopf <malte.schwarzkopf@cl.cam.ac.uk>
//
// Job descriptor protobuf.

syntax="proto3";

package proto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "task_desc.proto";

//option (gogoproto.goproto_enum_prefix_all) = false;

message JobDescriptor {
  enum JobState {
    New = 0;
    Created = 1;
    Running = 2;
    Completed = 3;
    Failed = 4;
    Aborted = 5;
    Unknown = 6;
  }

  string uuid = 1;
  string name = 2;
  JobState state = 3;
  TaskDescriptor root_task = 4;
  repeated bytes output_ids = 5;
}

